--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,6 @@
+# ── Clés API pour les LLM ──────────────────────────────────────
 MISTRAL_API_KEY=
+
+# ── Clés API pour les embeddings (optionnel) ──────────────────
+# OpenAI embeddings (si vous ne voulez pas utiliser Transformers.js local)
+OPENAI_API_KEY=
