--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.23.0",
   "dependencies": {
+    "@xenova/transformers": "^2.17.2",
     "chalk": "^4.1.2",
     "dotenv": "^17.3.1",
     "natural": "^8.1.0",
