--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "analyser-ia",
+  "name": "ask-rules",
   "version": "1.0.0",
   "description": "PoC - Analyse de règles de jeu de société en français avec NLP",
   "main": "dist/index.js",
@@ -8,11 +8,6 @@
     "build:web": "vite build",
     "start:web": "node build/index.js",
     "migrate": "tsx src/migrate.ts",
-    "add": "tsx src/index.ts add",
-    "ask": "tsx src/index.ts ask",
-    "start": "tsx src/analyser.ts data/regles.txt",
-    "analyse:txt": "tsx src/analyser.ts data/regles.txt",
-    "analyse:pdf": "tsx src/analyser.ts data/regles.pdf",
     "build": "tsc --project tsconfig.node.json",
     "start:dist": "node dist/index.js"
   },
@@ -30,23 +25,22 @@
   "type": "module",
   "packageManager": "pnpm@10.23.0",
   "dependencies": {
-    "@sveltejs/adapter-node": "^5.5.3",
-    "@sveltejs/kit": "^2.53.0",
-    "@xenova/transformers": "^2.17.2",
-    "chalk": "^4.1.2",
-    "dotenv": "^17.3.1",
-    "natural": "^8.1.0",
-    "pdf-parse": "^1.1.1",
-    "pg": "^8.18.0",
-    "svelte": "^5.53.3"
+    "@sveltejs/adapter-node": "5.5.3",
+    "@sveltejs/kit": "2.53.0",
+    "@xenova/transformers": "2.17.2",
+    "chalk": "4.1.2",
+    "dotenv": "17.3.1",
+    "natural": "8.1.0",
+    "pdfreader": "^3.0.2",
+    "pg": "8.18.0",
+    "svelte": "5.53.3"
   },
   "devDependencies": {
-    "@types/node": "^22.0.0",
-    "@types/pdf-parse": "^1.1.4",
-    "@types/pg": "^8.16.0",
-    "svelte-check": "^4.4.3",
-    "tsx": "^4.21.0",
-    "typescript": "^5.7.0",
-    "vite": "^6.4.1"
+    "@types/node": "22.0.0",
+    "@types/pg": "8.16.0",
+    "svelte-check": "4.4.3",
+    "tsx": "4.21.0",
+    "typescript": "5.9.3",
+    "vite": "6.4.1"
   }
 }
