Change NLP (pdf parser + nlp processor

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,12 @@ MISTRAL_API_KEY=
 # ── Clés API pour les embeddings (optionnel) ──────────────────
 # OpenAI embeddings (si vous ne voulez pas utiliser Transformers.js local)
 OPENAI_API_KEY=
+
+DATABASE_URL=
+
+# ── Réseau / TLS ───────────────────────────────────────────────
+# À activer si vous êtes derrière un proxy SSL (inspection TLS d'entreprise)
+# qui empêche le téléchargement des modèles HuggingFace.
+# ⚠ Désactive la vérification des certificats TLS pour tout le processus Node.js.
+# Ne pas utiliser en production sans comprendre les implications.
+# NODE_TLS_REJECT_UNAUTHORIZED=0
