--- a/package.json
+++ b/package.json
@@ -25,18 +25,19 @@
   "type": "module",
   "packageManager": "pnpm@10.23.0",
   "dependencies": {
+    "@huggingface/transformers": "^3.8.1",
     "@sveltejs/adapter-node": "5.5.3",
     "@sveltejs/kit": "2.53.0",
-    "@xenova/transformers": "2.17.2",
     "chalk": "4.1.2",
     "dotenv": "17.3.1",
     "natural": "8.1.0",
-    "pdfreader": "^3.0.2",
+    "pdf-parse": "^2.4.5",
     "pg": "8.18.0",
     "svelte": "5.53.3"
   },
   "devDependencies": {
     "@types/node": "22.0.0",
+    "@types/pdf-parse": "^1.1.5",
     "@types/pg": "8.16.0",
     "svelte-check": "4.4.3",
     "tsx": "4.21.0",
