Add env file location

--- a/.env.sample
+++ b/.env.sample
@@ -7,6 +7,11 @@ OPENAI_API_KEY=
 
 DATABASE_URL=
 
+# ── Stockage des fichiers ──────────────────────────────────────
+# Répertoire pour stocker les fichiers uploadés (PDF, TXT)
+# Par défaut: uploads/ à la racine du projet
+# UPLOADS_DIR=/var/data/ask-rules/uploads
+
 # ── Réseau / TLS ───────────────────────────────────────────────
 # À activer si vous êtes derrière un proxy SSL (inspection TLS d'entreprise)
 # qui empêche le téléchargement des modèles HuggingFace.
