Add biomejs as linter

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "start:web": "node build/index.js",
     "migrate": "tsx src/migrate.ts",
     "build": "tsc --project tsconfig.node.json",
-    "start:dist": "node dist/index.js"
+    "start:dist": "node dist/index.js",
+    "lint": "biome lint",
+    "lint:fix": "biome lint --write",
+    "format": "biome format --write"
   },
   "keywords": [
     "nlp",
@@ -36,6 +39,7 @@
     "svelte": "5.53.3"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.4.4",
     "@types/node": "22.0.0",
     "@types/pdf-parse": "^1.1.5",
     "@types/pg": "8.16.0",
