--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,9 +3,7 @@
     "target": "ES2020",
     "module": "CommonJS",
     "moduleResolution": "node",
-    "lib": [
-      "ES2020"
-    ],
+    "lib": ["ES2020"],
     "rootDir": "src",
     "outDir": "dist",
     "strict": true,
@@ -15,11 +13,6 @@
     "sourceMap": true,
     "resolveJsonModule": true
   },
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
