--- a/.env.sample
+++ b/.env.sample
@@ -7,6 +7,10 @@ OPENAI_API_KEY=
 
 DATABASE_URL=
 
+# ── Administration ─────────────────────────────────────────────
+# Mot de passe pour accéder à la page d'administration (/admin)
+ADMIN_PASSWORD=
+
 # ── Stockage des fichiers ──────────────────────────────────────
 # Répertoire pour stocker les fichiers uploadés (PDF, TXT)
 # Par défaut: uploads/ à la racine du projet
