Add cache redis + question length counter

--- a/.env.sample
+++ b/.env.sample
@@ -7,6 +7,18 @@ OPENAI_API_KEY=
 
 DATABASE_URL=
 
+# ── Cache Redis (optionnel) ────────────────────────────────────
+# URL de connexion Redis pour le cache des questions/réponses
+# Format: redis://[:password@]host[:port][/db-number]
+# Exemples:
+#   - Local: redis://localhost:6379
+#   - Avec auth: redis://:mypassword@localhost:6379
+#   - Redis Cloud: redis://username:password@redis-12345.cloud.redislabs.com:12345
+# Si non défini ou REDIS_ENABLED=false, l'application fonctionne sans cache
+REDIS_URL=redis://localhost:6379
+# Désactiver explicitement le cache même si REDIS_URL est défini
+# REDIS_ENABLED=false
+
 # ── Administration ─────────────────────────────────────────────
 # Mot de passe pour accéder à la page d'administration (/admin)
 ADMIN_PASSWORD=
