Add rate limiter

--- a/.env.sample
+++ b/.env.sample
@@ -19,6 +19,12 @@ REDIS_URL=redis://localhost:6379
 # Désactiver explicitement le cache même si REDIS_URL est défini
 # REDIS_ENABLED=false
 
+# ── Protection anti-spam ───────────────────────────────────────
+# Liste d'IPs exemptées du rate limiting (séparées par des virgules)
+# Utile pour les environnements de développement, tests, ou IPs de confiance
+# Exemple: RATE_LIMIT_WHITELIST=127.0.0.1,::1,192.168.1.100
+# RATE_LIMIT_WHITELIST=
+
 # ── Administration ─────────────────────────────────────────────
 # Mot de passe pour accéder à la page d'administration (/admin)
 ADMIN_PASSWORD=
