--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@sveltejs/kit": "2.53.0",
     "chalk": "4.1.2",
     "dotenv": "17.3.1",
+    "marked": "^17.0.3",
     "natural": "8.1.0",
     "pdf-parse": "^2.4.5",
     "pg": "8.18.0",
@@ -41,6 +42,7 @@
     "svelte": "5.53.3"
   },
   "devDependencies": {
+    "@types/marked": "^6.0.0",
     "@types/node": "22.0.0",
     "@types/pdf-parse": "^1.1.5",
     "@types/pg": "8.16.0",
